--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,10 @@ Type: Package
 Title: Variance Component Models
 Version: 0.2-0
 Date: 2015-06-30
-Author: Long Qu (long.qu@wright.edu)
-Maintainer: Long Qu <long.qu@wright.edu>
-Description: Variance component models: REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
+Author@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
+Description: Variance component models: global REML estimation, iterative REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
 Depends: R (>= 3.0.0)
-Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats
+Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats, mpoly
 LazyData: no
 ByteCompile: yes
 License: GPL-3
