--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Package: varComp
 Type: Package
 Title: Variance Component Models
 Version: 0.2-0
-Date: 2015-06-30
+Date: 2015-07-04
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
 Description: Variance component models: global REML estimation, iterative REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
 Depends: R (>= 3.0.0)
-Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats, polynom
+Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats, polynom, rationalfun
 LazyData: no
 ByteCompile: yes
 License: GPL-3
