partial initial implementation based on gmp

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: varComp
 Type: Package
 Title: Variance Component Models
 Version: 0.2-0
-Date: 2015-07-04
+Date: 2015-07-05
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
 Description: Variance component models: global REML estimation, iterative REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
-Depends: R (>= 3.0.0), rationalfun (>=0.1-1), polynom
+Depends: R (>= 3.0.0), rationalfun (>= 0.1-1), polynomBigQ, gmp
 Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats 
 LazyData: no
 ByteCompile: yes
