--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.2-0
 Date: 2015-07-07
 Authors@R: person("Long", "Qu", role=c("aut", "cre"), email="long.qu@wright.edu")
 Description: Variance component models: global REML estimation, iterative REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
-Depends: R (>= 3.0.0), polyRatGmp, gmp
+Depends: R (>= 3.0.0), bigPolyRat, gmp
 Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats 
 LazyData: no
 ByteCompile: yes
