--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: varComp
 Type: Package
 Title: Variance Component Models
 Version: 0.2-0
-Date: 2015-07-28
-Author: Long Qu (long.qu@wright.edu)
-Maintainer: Long Qu <long.qu@wright.edu>
+Date: 2017-07-09
+Author: Long Qu 
+Maintainer: Long Qu <rtistician@gmail.com>
 Description: Variance component models: REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
 Depends: R (>= 3.0.0)
 Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats, utils, graphics
