fix minque; remove am/AM
added trancate & rescale fallback when solve.QP fails in minque; removed am() and AM() kernels

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: varComp
 Type: Package
 Title: Variance Component Models
-Version: 0.2-1
-Date: 2017-07-14
+Version: 0.2-2
+Date: 2022-02-02
 Author: Long Qu 
 Maintainer: Long Qu <rtistician@gmail.com>
 Description: Variance component models: REML estimation, testing fixed effect contrasts through Satterthwaite or Kenward-Roger methods, testing the nullity of variance components through (linear or quadratic) score tests or likelihood ratio tests.
 Depends: R (>= 3.0.0)
-Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, SPA3G, mvtnorm, nlme, stats, utils, graphics
+Imports: quadprog, Matrix, MASS, CompQuadForm, RLRsim, mvtnorm, nlme, stats, utils, graphics
 LazyData: no
 ByteCompile: yes
 License: GPL-3
