--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,11 +34,12 @@ export(
 	p.value,
 #	satterth,
 #	KR,
-	am,
-	AM,
+#	am,
+#	AM,
 #	char2list,
 	cholRoot,
 	colon,
+	doFit.varComp,
 	get.seed,
 	ibs,
 	IBS,
